--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@imgly/background-removal": "^1.0.6",
     "axios": "^1.4.0",
+    "jspdf": "^2.5.1",
     "konva": "^9.2.0",
     "react": "^18.2.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.0.0",
     "react-export-excel": "^0.5.3",
+    "react-image-crop": "^10.1.8",
     "react-konva": "^18.2.10",
     "xlsx": "^0.18.5"
   },
